# day1

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  QUICKSTART.md  README.md  branched-memory-v2-pure-memory-layer.md  docker-compose.yml  go.mod  go.sum  nginx.conf  pyproject.toml
.claude/: settings.json
client-package/: README.md  day1_tracer.py  langchain_react_agent.py  litellm_react_agent.py  requirements.txt
cmd/day1/: main.go
cmd/day1-api/: main.go
dashboard/: package-lock.json  package.json  pnpm-lock.yaml
dashboard/src/: App.tsx
docs/: CLI_DESIGN.md  DAY1_FINAL_PLAN.md  E2E_REAL_ACCEPTANCE.md  E2E_TEST_METHODS.md  FEATURE_DEV_20260225.md  api_reference.md  architecture-decisions.md  architecture.md  code_practices.md  dashboard.md  development.md  e2e_real_acceptance_db_manifest.json  e2e_real_acceptance_latest.json  e2e_surface_latest_report.json  go-backend-migration.md  hooks.md  mcp_tools.md  phase5-task-handoff-and-curation.md  plan.md
docs/design/: 00-overview.md  01-matrixone-foundation.md  02-data-model.md  03-write-engines.md  04-query-engines.md  05-branch-engines.md  06-conversation-engines.md  07-task-engines.md  08-curation-engines.md  09-analysis-engines.md  (+7 more)
examples/: README.md  memory_flow.sh  simple_rest.py
scripts/: check_db.py  check_db.sh  e2e_surface.py  install_claude_project.sh  migrate.py  migrate_v2.py  run.sh  smoke_test.sh  start-mcp.sh  start.sh  test_mo_features.py
skills/: memory.md
tests/: README.md  conftest.py  test_api.py  test_cli.py  test_hooks_config.py  test_ingest_routes.py
(+210 files in other folders)
